--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,6 @@
         <img src="./assets/sample_image.jpg">
     </div>
     -->
-    <script src="../scripts/api.js"></script>
+    <script type="module" src="../scripts/index.js"></script>
   </body>
 </html>
