img tag but couldn't find the image api

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
         <div>Root</div>
         <div>노란고양이</div>
 
-        <button onclick="">fetch</button>
+        <!-- <button onclick="">fetch</button> -->
       </nav>
       <div class="Nodes">
         <div class="Node">
