redesign the architecture of code with App.js

--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
     background-color: #eee;
     flex-direction: column;
   }
+
+  .title {
+    text-align: center;
+  }
   
   .app {
     border: 1px solid #ccc;
