--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <h1 class = "title">고양이 사진첩</h1>
-    <main class="App">
+    <main class="app">
     <script type="module" src="../scripts/index.js"></script>
-    <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
   </body>
 </html>
